[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Brie Enemy/Brie.gltf" type="PackedScene" id=1]
[ext_resource path="res://Assets/Brie Enemy/Brie.gd" type="Script" id=4]

[sub_resource type="AnimationNodeAnimation" id=1]
animation = "Alert -loop"

[sub_resource type="AnimationNodeAnimation" id=2]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "Die"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "Idle -loop"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Walk -loop"

[sub_resource type="AnimationNodeStateMachine" id=6]
"states/Alert -loop/node" = SubResource( 1 )
"states/Alert -loop/position" = Vector2( 274, 98 )
states/Attack/node = SubResource( 2 )
states/Attack/position = Vector2( 705, 114 )
states/Die/node = SubResource( 3 )
states/Die/position = Vector2( 556, 159 )
"states/Idle -loop/node" = SubResource( 4 )
"states/Idle -loop/position" = Vector2( 670, 210 )
"states/Walk -loop/node" = SubResource( 5 )
"states/Walk -loop/position" = Vector2( 279, 181 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=7]

[sub_resource type="CapsuleShape" id=11]
radius = 0.75397
height = 0.212272

[sub_resource type="SphereShape" id=9]
radius = 8.0

[sub_resource type="SphereShape" id=10]
radius = 16.0

[node name="Brie" type="KinematicBody" groups=[
"enemies",
]]
script = ExtResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 6 )
anim_player = NodePath("../Brie/AnimationPlayer")
parameters/playback = SubResource( 7 )

[node name="AI" type="Node" parent="."]

[node name="WanderIdle" type="Timer" parent="AI"]
autostart = true

[node name="Brie" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.84164, 0 )
shape = SubResource( 11 )

[node name="Near" type="Area" parent="."]
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Near"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03089, 0 )
shape = SubResource( 9 )
disabled = true

[node name="Far" type="Area" parent="."]
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Far"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03089, 0 )
shape = SubResource( 10 )
disabled = true
[connection signal="timeout" from="AI/WanderIdle" to="." method="_on_WanderIdle_timeout"]
[connection signal="body_entered" from="Near" to="." method="_on_Near_body_entered"]
[connection signal="body_exited" from="Near" to="." method="_on_Near_body_exited"]
[connection signal="body_entered" from="Far" to="." method="_on_Far_body_entered"]
[connection signal="body_exited" from="Far" to="." method="_on_Far_body_exited"]

[editable path="Brie"]
